@@ -2,10 +2,9 @@ package pro.sky.collectonsHW1.service;
 
 import org.springframework.stereotype.Service;
 import pro.sky.collectonsHW1.Employee;
-import pro.sky.collectonsHW1.exceptions.EmployeeNotFoundException;
+import pro.sky.collectonsHW1.exceptions.DepartmentNotFoundException;
 
-import java.util.ArrayList;
-import java.util.Comparator;
+import java.util.*;
 import java.util.stream.Collectors;
 
 @Service
@@ -18,53 +17,68 @@ public class DepartmentService {
     }
 
     public double getDepMonthlySalarySum(int department) {
+        if (!hasSuchDepNumber(department)) {
+            throw new DepartmentNotFoundException();
+        }
         return employeeService.getEmployees().values().stream()
                 .filter(employee -> (employee.getDepartment() == department))
                 .map(Employee::getSalary)
                 .reduce(Double::sum)
-                .get();
+                .orElse(0.0);
     }
 
-    public Employee getDepMinSalary(int department) {
-        Employee emp;
-        double sal = employeeService.getEmployees().values().stream()
+    public Double getDepMinSalary(int department) {
+        if (!hasSuchDepNumber(department)) {
+            throw new DepartmentNotFoundException();
+        }
+        return employeeService.getEmployees().values().stream()
                 .filter(employee -> (employee.getDepartment() == department))
                 .map(Employee::getSalary)
                 .sorted()
                 .findFirst().orElse(0.0);
-        emp = employeeService.getEmployees().values().stream()
-                .filter(employee -> (employee.getDepartment() == department))
-                .filter(employee -> employee.getSalary() == sal)
-                .findFirst()
-                .orElseThrow(EmployeeNotFoundException::new);
-        return emp;
     }
 
-    public Employee getDepMaxSalary(int department) {
-        Employee emp;
-        double sal = employeeService.getEmployees().values().stream()
+    public Double getDepMaxSalary(int department) {
+        if (!hasSuchDepNumber(department)) {
+            throw new DepartmentNotFoundException();
+        }
+        return employeeService.getEmployees().values().stream()
                 .filter(employee -> (employee.getDepartment() == department))
                 .map(Employee::getSalary)
                 .sorted(Comparator.reverseOrder())
                 .findFirst().orElse(0.0);
-        emp = employeeService.getEmployees().values().stream()
-                .filter(employee -> (employee.getDepartment() == department))
-                .filter(employee -> employee.getSalary() == sal)
-                .findFirst()
-                .orElseThrow(EmployeeNotFoundException::new);
-        return emp;
     }
 
-    public ArrayList<Employee> getDepEmployeesList(int department) {
-        return (ArrayList<Employee>) employeeService.getEmployees().values().stream()
+
+    public List<Employee> getDepEmployeesList(int department) {
+        if (!hasSuchDepNumber(department)) {
+            throw new DepartmentNotFoundException();
+        }
+        return employeeService.getEmployees().values().stream()
                 .filter(employee -> (employee.getDepartment() == department))
                 .collect(Collectors.toList());
     }
 
-    public ArrayList<Employee> getSortedByDeptEmployeesList() {
-        return (ArrayList<Employee>) employeeService.getEmployees().values().stream()
-                .sorted(Comparator.comparingInt(Employee::getDepartment))
-                .collect(Collectors.toList());
+    public Map<Integer, List<Employee>> getSortedByDeptEmployeesList() {
+        Map<Integer, List<Employee>> readyToReturn = new HashMap<Integer, List<Employee>>();
+        List<Integer> departmentsNumbers = employeeService.getEmployees().values().stream()
+                .map(Employee::getDepartment)
+                .toList();
+        for (Integer i : departmentsNumbers) {
+            readyToReturn.put(i, getDepEmployeesList(i));
+        }
+
+        return readyToReturn;
+    }
+
+    public boolean hasSuchDepNumber(int department) {
+        List<Integer> departmentsNumbers = employeeService.getEmployees().values().stream()
+                .map(Employee::getDepartment)
+                .toList();
+        if (departmentsNumbers.contains(department)) {
+            return true;
+        }
+        return false;
     }
 
 }
